# samestr

./: .gitignore  Dockerfile  MANIFEST.in  README.md  environment.yml  parse_args.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: docker-publish.yml  pypi-publish.yml  singularity.yml
example/sstr_stats/: t__SGB6744.aln_stats.txt
example/sstr_summarize/: sstr_cooccurrences.tsv  sstr_strain_events.tsv  taxon_counts.tsv
recipes/: meta.yaml
samestr/: __init__.py  parse_args.py  samestr
samestr/align/: __init__.py  _run_fastq_stats.py  _run_kneaddata.py  _run_metaphlan.py  metaphlan_ignore_markers.py
samestr/compare/: __init__.py  _compare.py  compare.py
samestr/convert/: __init__.py  _bam2freq.py  _concatenate_gene_files.py  _sam2bam.py  bam2freq.py  buffered_reader.py  concatenate_gene_files.py  convert.py  dump_file.py  filter_sam.py  kp2np.py  kpileup.pl  kpileup.py  sam2bam.py
samestr/db/: __init__.py  generate_db.py  metaphlan_tree.py
samestr/extract/: __init__.py  _ref2freq.py  ref2freq.py
samestr/filter/: __init__.py  _consensus.py  _filter_freqs.py  consensus.py  filter_freqs.py
samestr/merge/: __init__.py  _freq2freqs.py  freq2freqs.py
samestr/stats/: __init__.py  _alignment_stats.py  alignment_stats.py
samestr/summarize/: __init__.py  _summarize.py  read_metaphlan_data.R  read_metaphlan_data.py  read_samestr_data.R  read_samestr_data.py  read_taxonomic_profiles.py  summarize.R  summarize.py  taxa_cooccurrence.R
samestr/utils/: __init__.py  citations.py  dump_file.py  file_mapping.py  ooSubprocess.py  parse_args.py  utilities.py  which.py
