[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "samestr"
version = "1.2023.03-1"
authors = [
  { name="Daniel Podlesny", email="daniel.podlesny@embl.de" },
]
description = 'SameStr identifies shared strains between pairs of metagenomic samples based on the similarity of SNV profiles.'
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"