[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "samestr"
version = "1.2023.04"
authors = [
  { name="Daniel Podlesny", email="daniel.podlesny@embl.de" },
]
description = 'SameStr identifies shared strains between pairs of metagenomic samples based on the similarity of SNV profiles.'
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Environment :: Console",
    "Natural Language :: English"
]

[project.urls]
"Homepage" = "https://github.com/danielpodlesny/samestr"
"Bug Tracker" = "https://github.com/danielpodlesny/samestr/issues"
"Publication" = "https://doi.org/10.1186/s40168-022-01251-w"
